Correction taille card

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a:hover
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    width: 24%;
+    width: 300px;
     margin: 100px;
     padding-top: 15px;
     border-radius: 15px;
